src/main/resources/io/javaoperatorsdk/operator/sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
spec:
  selector:
    matchLabels:
      app: ""
  replicas: 1
  template:
    metadata:
      labels:
        app: ""
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: ""
